[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bottle_rest"
version = "0.0.1"
authors = [
  { name="TJ Renninger", email="renninger12@gmail.com" },
]
description = "bottle.py REST plugin"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]